--- a/.cds/build.pip.yml
+++ b/.cds/build.pip.yml
@@ -4,7 +4,7 @@ jobs:
 - job: First job
   steps:
   - checkout: '{{.cds.workspace}}'
-  - script : mvn package
-  - artifactUpload : target/*.jar 
+  - script: mvn package
+  - artifactUpload: 'target/*.jar'
   requirements:
   - binary: git
