--- a/.cds/build.pip.yml
+++ b/.cds/build.pip.yml
@@ -5,6 +5,7 @@ jobs:
   steps:
   - checkout: '{{.cds.workspace}}'
   - script:
+    - echo 'foo'
     - mvn package
   - artifactUpload:
       path: target/*.tar.gz
